Fixed API attend.

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -14,6 +14,13 @@ security:
           entity: { class: Club\UserBundle\Entity\User, property: member_number }
 
     firewalls:
+        api:
+            pattern: ^/api/
+            security: true
+            anonymous: true
+            http_basic:
+                realm: "ClubMaster API"
+
         main:
             form_login:
                 check_path: /login_check
