Renamed some defaults on TeamBundle

--- a/src/Club/TeamBundle/Resources/config/routing.yml
+++ b/src/Club/TeamBundle/Resources/config/routing.yml
@@ -1,3 +1,4 @@
-ClubTeamBundle_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: ClubTeamBundle:Default:index }
+_admin_team:
+  resource: "@ClubTeamBundle/Controller/AdminTeamController.php"
+  type: annotation
+  prefix: /admin
