--- a/src/Club/TeamBundle/Resources/config/routing.yml
+++ b/src/Club/TeamBundle/Resources/config/routing.yml
@@ -3,6 +3,11 @@ _admin_team:
   type: annotation
   prefix: /admin
 
+_admin_schedule:
+  resource: "@ClubTeamBundle/Controller/AdminScheduleController.php"
+  type: annotation
+  prefix: /admin
+
 _admin_repetition:
   resource: "@ClubTeamBundle/Controller/AdminRepetitionController.php"
   type: annotation
