--- a/src/Club/ShopBundle/Resources/config/listener.yml
+++ b/src/Club/ShopBundle/Resources/config/listener.yml
@@ -19,8 +19,8 @@ services:
     arguments: [@doctrine.orm.entity_manager,@order]
     tags:
       - { name: kernel.event_listener, event: auto_renewal.task, method: onAutoRenewalTask }
-  club.shopbundle.listener.on_coupon_use_listener:
-    class: Club\ShopBundle\Listener\CouponUseListener
+  club.shopbundle.listener.subscription_use_listener:
+    class: Club\ShopBundle\Listener\SubscriptionUseListener
     arguments: [@doctrine.orm.entity_manager,@security.context]
     tags:
-      - { name: kernel.event_listener, event: coupon.use, method: onCouponUse }
+      - { name: kernel.event_listener, event: team.use, method: onSubscriptionUse }
