Changed events to team.attend and team.unattend.

--- a/src/Club/ShopBundle/Resources/config/listener.yml
+++ b/src/Club/ShopBundle/Resources/config/listener.yml
@@ -23,4 +23,4 @@ services:
     class: Club\ShopBundle\Listener\SubscriptionUseListener
     arguments: [@doctrine.orm.entity_manager,@security.context]
     tags:
-      - { name: kernel.event_listener, event: team.use, method: onSubscriptionUse }
+      - { name: kernel.event_listener, event: team.attend, method: onSubscriptionUse }
