--- a/src/Club/ShopBundle/Resources/config/listener.yml
+++ b/src/Club/ShopBundle/Resources/config/listener.yml
@@ -23,4 +23,9 @@ services:
     class: Club\ShopBundle\Listener\SubscriptionUseListener
     arguments: [@doctrine.orm.entity_manager,@security.context]
     tags:
-      - { name: kernel.event_listener, event: team.attend, method: onSubscriptionUse }
+      - { name: kernel.event_listener, event: team.attend, method: onTeamAttend }
+  club.shopbundle.listener.subscription_use_listener:
+    class: Club\ShopBundle\Listener\SubscriptionUseListener
+    arguments: [@doctrine.orm.entity_manager,@security.context]
+    tags:
+      - { name: kernel.event_listener, event: team.unattend, method: onTeamUnattend }
