--- a/src/Club/TeamBundle/Resources/config/listener.yml
+++ b/src/Club/TeamBundle/Resources/config/listener.yml
@@ -19,3 +19,8 @@ services:
     arguments: [@doctrine.orm.entity_manager, %club_team.future_occurs%]
     tags:
       - { name: kernel.event_listener, event: team.task, method: onTeamTask }
+  club.team.team.penalty:
+    class: Club\TeamBundle\Listener\TeamPenaltyListener
+    arguments: [@doctrine.orm.entity_manager, %club_team.minutes_before_schedule%, %club_team.penalty_enabled%]
+    tags:
+      - { name: kernel.event_listener, event: team.penalty, method: onTeamPenalty }
