--- a/src/Club/BookingBundle/Resources/config/services.yml
+++ b/src/Club/BookingBundle/Resources/config/services.yml
@@ -1,7 +1,3 @@
-parameters:
-#    club_booking.example.class: Club\BookingBundle\Example
-
 services:
-#    club_booking.example:
-#        class: %club_booking.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    club_booking.interval:
+        class: Club\BookingBundle\Helper\Interval
