--- a/src/Club/APIBundle/Resources/config/routing.yml
+++ b/src/Club/APIBundle/Resources/config/routing.yml
@@ -28,3 +28,8 @@ _api_location:
   type: annotation
   prefix: /api/locations
 
+_api_field:
+  resource: "@ClubAPIBundle/Controller/FieldController.php"
+  type: annotation
+  prefix: /api/fields
+
