Obey cancel booking rules.

--- a/src/Club/BookingBundle/Resources/config/services.yml
+++ b/src/Club/BookingBundle/Resources/config/services.yml
@@ -3,4 +3,4 @@ services:
         class: Club\BookingBundle\Helper\Interval
     club_booking.booking:
         class: Club\BookingBundle\Helper\Booking
-        arguments: [@doctrine.orm.entity_manager, @service_container]
+        arguments: [@doctrine.orm.entity_manager, @service_container, @security.context]
