--- a/app/config/clubmaster.yml
+++ b/app/config/clubmaster.yml
@@ -9,6 +9,8 @@ club_team:
     future_occurs: 25
     minutes_before_schedule: 120
     penalty_enabled: true
+    cancel_minute_before: 120
+    cancel_minute_created: 5
 
 club_booking:
     enable_guest: true
