--- a/src/Club/UserBundle/Resources/config/twig.yml
+++ b/src/Club/UserBundle/Resources/config/twig.yml
@@ -1,6 +1,6 @@
 services:
   clubmaster.twig.extension:
     class: Club\UserBundle\Extension\PriceExtension
-    arguments: [@doctrine.orm.entity_manager,@security.context]
+    arguments: [@doctrine.orm.entity_manager, @security.context, @session]
     tags:
       - { name: twig.extension }
