Renamed controller and routes.

--- a/src/Club/BookingBundle/Resources/config/routing.yml
+++ b/src/Club/BookingBundle/Resources/config/routing.yml
@@ -11,3 +11,7 @@ _interval:
 _booking:
   resource: "@ClubBookingBundle/Controller/BookingController.php"
   type: annotation
+
+_overview:
+  resource: "@ClubBookingBundle/Controller/OverviewController.php"
+  type: annotation
