Added welcome bundle edit page.

--- a/src/Club/WelcomeBundle/Resources/config/routing.yml
+++ b/src/Club/WelcomeBundle/Resources/config/routing.yml
@@ -2,3 +2,7 @@ _welcome:
   resource: "@ClubWelcomeBundle/Controller/WelcomeController.php"
   type: annotation
 
+_admin_welcome:
+  resource: "@ClubWelcomeBundle/Controller/AdminWelcomeController.php"
+  type: annotation
+  prefix: /admin
