--- a/src/Club/LayoutBundle/Resources/config/twig.yml
+++ b/src/Club/LayoutBundle/Resources/config/twig.yml
@@ -1,6 +1,6 @@
 services:
   club_user_extension_price:
-    class: Club\UserBundle\Extension\PriceExtension
+    class: Club\UserBundle\Twig\Extension\PriceExtension
     arguments: [@doctrine.orm.entity_manager, @security.context, @session]
     tags:
       - { name: twig.extension }
