Added club_date filter.

--- a/src/Club/LayoutBundle/Resources/config/twig.yml
+++ b/src/Club/LayoutBundle/Resources/config/twig.yml
@@ -4,3 +4,8 @@ services:
     arguments: [@doctrine.orm.entity_manager, @security.context, @session]
     tags:
       - { name: twig.extension }
+  club_layout_twig_date_extension:
+    class: Club\LayoutBundle\Twig\DateExtension
+    arguments: [@doctrine.orm.entity_manager, @security.context, @session]
+    tags:
+      - { name: twig.extension }
