--- a/src/Club/WelcomeBundle/Resources/config/routing.yml
+++ b/src/Club/WelcomeBundle/Resources/config/routing.yml
@@ -6,3 +6,8 @@ _admin_welcome:
   resource: "@ClubWelcomeBundle/Controller/AdminWelcomeController.php"
   type: annotation
   prefix: /admin
+
+_admin_blog:
+  resource: "@ClubWelcomeBundle/Controller/AdminBlogController.php"
+  type: annotation
+  prefix: /admin
