Added installer link on finished configuration.

--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -9,11 +9,11 @@
     database_user     = root
     database_password =
 
-    mailer_transport  = sendmail
-    mailer_host       =
+    mailer_transport  = smtp
+    mailer_host       = localhost
     mailer_user       =
     mailer_password   =
 
     locale            = en
 
-    secret            = f59126f7bcd316fa9df22c80c6e33435
+    secret            = ThisTokenIsNotSoSecretChangeIt
