--- a/src/Club/UserBundle/Resources/config/listener.yml
+++ b/src/Club/UserBundle/Resources/config/listener.yml
@@ -19,3 +19,8 @@ services:
     arguments: [@doctrine.orm.entity_manager, @security.context, @session]
     tags:
       - { name: kernel.event_listener, event: security.interactive_login }
+  club.userbundle.location:
+    class: Club\UserBundle\Listener\LocationListener
+    arguments: [@doctrine.orm.entity_manager, @security.context, @session]
+    tags:
+      - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
