--- a/src/Club/LogBundle/Resources/config/listener.yml
+++ b/src/Club/LogBundle/Resources/config/listener.yml
@@ -34,3 +34,8 @@ services:
     arguments: [@doctrine.orm.entity_manager,@security.context]
     tags:
       - { name: kernel.event_listener, event: connection.error, method: onConnectionError }
+  club.logbundle.listener.task_listener:
+    class: Club\LogBundle\Listener\TaskListener
+    arguments: [@doctrine.orm.entity_manager]
+    tags:
+      - { name: kernel.event_listener, event: task.error, method: onTaskError }
