--- a/app/config/clubmaster.yml
+++ b/app/config/clubmaster.yml
@@ -26,6 +26,10 @@ club_booking:
     cancel_minute_before: 120
     cancel_minute_created: 5
 
+club_mail:
+    default_sender_address: info@clubmaster.org
+    default_sender_name: ClubMaster Administrator
+
 ornicar_gravatar:
     rating: g
     size: 160
