--- a/src/Club/UserBundle/Resources/config/services.yml
+++ b/src/Club/UserBundle/Resources/config/services.yml
@@ -9,5 +9,5 @@ services:
     arguments: [@doctrine.orm.entity_manager, @security.context]
   clubmaster.user:
     class: Club\UserBundle\Helper\User
-    arguments: [@doctrine.orm.entity_manager]
+    arguments: [@doctrine.orm.entity_manager, @event_dispatcher]
 
