--- a/src/Club/EventBundle/Resources/config/listener.yml
+++ b/src/Club/EventBundle/Resources/config/listener.yml
@@ -1,11 +1,11 @@
 services:
   club.eventbundle.listener.top_menu_render_listener:
     class: Club\EventBundle\Listener\MenuListener
-    arguments: [@router, @security.context, @translator]
+    arguments: [@router, @security.context, @translator, %club_event.enabled%]
     tags:
       - { name: kernel.event_listener, event: top_menu.render, method: onTopMenuRender }
   club.eventbundle.listener.left_menu_render_listener:
     class: Club\EventBundle\Listener\MenuListener
-    arguments: [@router, @security.context, @translator]
+    arguments: [@router, @security.context, @translator, %club_event.enabled%]
     tags:
       - { name: kernel.event_listener, event: left_menu.render, method: onLeftMenuRender }
