Added AdminRule controller.

--- a/src/Club/RankingBundle/Resources/config/routing.yml
+++ b/src/Club/RankingBundle/Resources/config/routing.yml
@@ -7,3 +7,8 @@ _admin_ranking_game:
   resource: "@ClubRankingBundle/Controller/AdminGameController.php"
   type: annotation
   prefix: /admin/ranking/game
+
+_admin_ranking_rule:
+  resource: "@ClubRankingBundle/Controller/AdminRuleController.php"
+  type: annotation
+  prefix: /admin/ranking/rule
