--- a/src/Club/BookingBundle/Resources/config/services.yml
+++ b/src/Club/BookingBundle/Resources/config/services.yml
@@ -1,7 +1,7 @@
 services:
     club_booking.interval:
         class: Club\BookingBundle\Helper\Interval
-        arguments: [@doctrine.orm.entity_manager]
+        arguments: [@doctrine.orm.entity_manager, @session]
     club_booking.booking:
         class: Club\BookingBundle\Helper\Booking
         arguments: [@doctrine.orm.entity_manager, @service_container, @security.context, @session, @club_booking.interval, @translator]
