--- a/src/Club/TeamBundle/Resources/config/listener.yml
+++ b/src/Club/TeamBundle/Resources/config/listener.yml
@@ -10,12 +10,12 @@ services:
     tags:
       - { name: kernel.event_listener, event: top_menu.render, method: onTopMenuRender }
   club.team.repetition.change:
-    class: Club\TeamBundle\Listener\GenerateScheduleListener
+    class: Club\TeamBundle\Listener\GenerateTeamListener
     arguments: [@doctrine.orm.entity_manager, %club_team.future_occurs%]
     tags:
       - { name: kernel.event_listener, event: repetition.change, method: onRepetitionChange }
   club.team.team.task:
-    class: Club\TeamBundle\Listener\GenerateScheduleListener
+    class: Club\TeamBundle\Listener\GenerateTeamListener
     arguments: [@doctrine.orm.entity_manager, %club_team.future_occurs%]
     tags:
       - { name: kernel.event_listener, event: team.task, method: onTeamTask }
