--- a/src/Club/TeamBundle/Resources/config/routing.yml
+++ b/src/Club/TeamBundle/Resources/config/routing.yml
@@ -12,15 +12,15 @@ _admin_level:
   type: annotation
   prefix: /admin
 
-_admin_team_category:
-  resource: "@ClubTeamBundle/Controller/AdminTeamCategoryController.php"
-  type: annotation
-  prefix: /admin/team/category
-
 _admin_team:
   resource: "@ClubTeamBundle/Controller/AdminTeamController.php"
   type: annotation
-  prefix: /admin/team/team
+  prefix: /admin
+
+_admin_schedule:
+  resource: "@ClubTeamBundle/Controller/AdminScheduleController.php"
+  type: annotation
+  prefix: /admin
 
 _admin_repetition:
   resource: "@ClubTeamBundle/Controller/AdminRepetitionController.php"
